UUID player dependency